# vm-clockify

./: .env_project  .env_template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tests-start.sh  tox.ini
.github/: renovate.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: README.md  ci.yml  docker-build.yml  python-dev.yml  python-release.yml
app/: main.py
app/commands/: api.py  clockify.py  youtrack.py
app/service/: api_clockify_service.py  api_landwehr_service.py  api_service.py  api_youtrack_service.py
app/utils/: config.py  locater.py  utils.py  utilsHelper.py
scripts/: clean.sh  format-imports.sh  format.sh  lint.sh  requirements-update.sh  setup-dev.sh  test.sh
vm_clockify/: main.py
vm_clockify/commands/: clockify.py  landwehr.py  youtrack.py
vm_clockify/service/: api_clockify_service.py  api_landwehr_service.py  api_youtrack_service.py
vm_clockify/utils/: config.py  locater.py  logHelper.py  log_helper.py  utilsFolderHelper.py  utilsHelper.py  utilsProcessHelper.py  utils_helper.py
